--- a/index.html
+++ b/index.html
@@ -79,8 +79,8 @@
                         <div class="card-text"><h3>Calculator</h3></div>
                     </div>
                 </a>
-                <a class="out-of-service tooltip" onclick="document.getElementById('id01').style.display='block'"><span class="tooltiptext">Unavailable</span>
-                    <div style="opacity:0.6;" class="card">
+                <a href="etchasketch.html" id="etchasketch-link">
+                    <div class="card">
                         <img src="./img/img-panel-pen.jpg" alt="">
                         <div class="card-text"><h3>Etch-A-Sketch</h3></div>
                     </div>
