--- a/index.html
+++ b/index.html
@@ -67,8 +67,9 @@
         <div id="img-panel">
             <div class="img-panel-title"><h2>My Work</h2></div>
             <div class="img-panel-main">
-                <a class="out-of-service tooltip" onclick="document.getElementById('id01').style.display='block'"><span class="tooltiptext">Unavailable</span> 
-                    <div style="opacity:0.6;" class="card">
+                <!-- <a class="out-of-service tooltip" onclick="document.getElementById('id01').style.display='block'"><span class="tooltiptext">Unavailable</span> -->
+                <a href="rock-paper-scissors.html">  
+                    <div class="card">
                         <img src="./img/rps.jpg" alt="hands displaying rock, paper, and scissors">
                         <div class="card-text"><h3>Rock Paper Scissors</h3></div>
                     </div>
@@ -79,7 +80,7 @@
                         <div class="card-text"><h3>Calculator</h3></div>
                     </div>
                 </a>
-                <a href="etchasketch.html" id="etchasketch-link">
+                <a href="etchasketch.html" id="disable-mobile-link">
                     <div class="card">
                         <img src="./img/img-panel-pen.jpg" alt="">
                         <div class="card-text"><h3>Etch-A-Sketch</h3></div>
