Add yamada ramen link in my work section

--- a/index.html
+++ b/index.html
@@ -67,7 +67,6 @@
         <div id="img-panel">
             <div class="img-panel-title"><h2>My Work</h2></div>
             <div class="img-panel-main">
-                <!-- <a class="out-of-service tooltip" onclick="document.getElementById('id01').style.display='block'"><span class="tooltiptext">Unavailable</span> -->
                 <a href="rock-paper-scissors.html">  
                     <div class="card">
                         <img src="./img/rps.jpg" alt="hands displaying rock, paper, and scissors">
@@ -92,11 +91,17 @@
                         <div class="card-text"><h3>Coming Soon</h3></div>
                     </div>
                 </a>
+                <a href="https://phenomenalgavinsutton6511.wordpress.com/" target="_blank">  
+                    <div class="card">
+                        <img src="./img/ramenWebsiteIcon.jpg" alt="bowl of ramen">
+                        <div class="card-text"><h3>Yamada Ramen</h3></div>
+                    </div>
+                </a>
             </div>
         </div>
     <div class="footer">
         Created by Gavin Sutton<br>
-        Images Designed by Freepik
+        Images provided by freepik.com
     </div>
 <!-- Hidden popup element-->
 <div id="id01" class="popup-error">
