--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <div class="background">
-        <div class="header">
+        <div class="header" id="index-header">
             <div class="header-links">
                 <a class="a-header prevent-select" href="./index.html">Home</a>
                 <a class="a-header prevent-select" href="./about.html">About</a>
