Add close button inside popup container

--- a/index.html
+++ b/index.html
@@ -107,8 +107,8 @@
 </div>
 <!-- Hidden popup element-->
 <div id="id01" class="popup-error">
-    <span onclick="document.getElementById('id01').style.display='none'" class="close" title="Close Popup">&times;</span>
     <div class="popup-content">
+        <span onclick="document.getElementById('id01').style.display='none'" class="close" title="Close">&times;</span>
         <div class="container">
             <p>Sorry, this is currently unavailable.</p>
         </div>
