--- a/index_jp.html
+++ b/index_jp.html
@@ -89,8 +89,8 @@
         </div>
         <div class="sign-up-panel">
             <div class="modal">
-                <div class="modal-header"><h2>あなたのビジョンを共に実現しましょう。</h2></div>
-                <div class="modal-text"><h3>お気軽にお問い合わせください。</h3></div>
+                <div class="modal-header"><h2>あなたのビジョンを共に実現しましょう</h2></div>
+                <div class="modal-text"><h3>どうぞお気軽にお問い合わせくださいませ</h3></div>
                 <div class="copy-link">
                     <input type="text" id="myEmail" class="copy-link-input" value="gavinsutton6511@gmail.com" readonly>
                     <button type="button" class="copy-link-button" onclick="copyText()">
@@ -107,8 +107,8 @@
 </div>
 <!-- Hidden popup element-->
 <div id="id01" class="popup-error">
-    <span onclick="document.getElementById('id01').style.display='none'" class="close" title="Close Popup">&times;</span>
     <div class="popup-content">
+        <span onclick="document.getElementById('id01').style.display='none'" class="close" title="Close">&times;</span>
         <div class="container">
             <p>申し訳ございませんが、<br>こちらは現在使用できません。</p>
         </div>
