Change links to jp versions

--- a/index_jp.html
+++ b/index_jp.html
@@ -14,9 +14,9 @@
     <div class="background">
         <div class="header" id="index-header">
             <div class="header-links">
-                <a class="a-header prevent-select" href="./index.html">ホーム</a>
-                <a class="a-header prevent-select" href="./about.html">ストーリ</a>
-                <a class="a-header prevent-select" href="./index.html#img-panel">自作</a>
+                <a class="a-header prevent-select" href="./index_jp.html">ホーム</a>
+                <a class="a-header prevent-select" href="./about_jp.html">ストーリー</a>
+                <a class="a-header prevent-select" href="./index_jp.html">自作</a>
                 <div class="dropbtn prevent-select" onclick="dropdownToggle()">その他<span class="material-icons inline-material-icons prevent-select">expand_more</span>
                     <div class="dropdown-content" id="myDropdown">
                         <a class="prevent-select" href="./document/resume.pdf" target="_blank">履歴書<span class="material-icons inline-material-icons">file_download</span></a>
@@ -32,7 +32,7 @@
             <div class="hero-text">
                 <div class="hero-text-title"><h1>サットン <br> ギャビン</h1></div>
                 <div class="hero-text-main">フロントエンド・エンジニア</div>
-                <button class="hero-text-button" onclick="window.location.href='./about.html';">私のストーリ</button>
+                <button class="hero-text-button" onclick="window.location.href='./about.html';">私のストーリー</button>
             </div>
             <div class="hero-img">
                 <img src="./img/self-zoomed.jpg" alt="picture of me" class="hero-sample">
@@ -73,13 +73,13 @@
                         <div class="card-text"><h3 style="white-space: nowrap;">らーめん山田</h3></div>
                     </div>
                 </a>
-                <a class="out-of-service tooltip" onclick="document.getElementById('id01').style.display='block'"><span class="tooltiptext">Unavailable</span>
+                <a class="out-of-service tooltip" onclick="document.getElementById('id01').style.display='block'"><span class="tooltiptext">使用禁止</span>
                     <div style="opacity:0.6;" class="card">
                         <img src="./img/calculator.jpg" alt="">
                         <div class="card-text"><h3>電卓</h3></div>
                     </div>
                 </a>
-                <a class="out-of-service tooltip" onclick="document.getElementById('id01').style.display='block'"><span class="tooltiptext">Unavailable</span>
+                <a class="out-of-service tooltip" onclick="document.getElementById('id01').style.display='block'"><span class="tooltiptext">使用禁止</span>
                     <div style="opacity:0.6;" class="card">
                         <img src="./img/under_construction.jpg" alt="">
                         <div class="card-text"><h3>発展中</h3></div>
