Add basic language selection popup on load

--- a/index.html
+++ b/index.html
@@ -114,5 +114,15 @@
         </div>
     </div>
 </div>
+<div class="welcome-popup" id="welcome">
+    <div class="welcome-popup-content">
+        <h1>Welcome to my website! <br> ようこそ！</h1>
+        <p>Please choose a language to continue. <br> 言語を選択して続けます。</p>
+        <div class="language-selector-container">
+            <a class="selector-box" onclick="document.getElementById('welcome').style.display='none'">English</a>
+            <a class="selector-box" href="./index_jp.html">日本語</a>
+        </div>
+    </div>
+</div>
 </body>
 </html>
