--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         <div class="sign-up-panel">
             <div class="modal">
                 <div class="modal-header"><h2>Let's work together!</h2></div>
-                <div class="modal-text"><h3>Send me an email!</h3></div>
+                <div class="modal-text"><p>Send me an email!</p></div>
                 <div class="copy-link">
                     <input type="text" id="myEmail" class="copy-link-input" value="gavinsutton6511@gmail.com" readonly>
                     <button type="button" class="copy-link-button" onclick="copyText()">
@@ -116,7 +116,7 @@
 </div>
 <div class="welcome-popup" id="welcome">
     <div class="welcome-popup-content">
-        <h1>Welcome to my website! <br> ようこそ！</h1>
+        <p>Welcome to my website! <br> ようこそ！</p>
         <p>Please choose a language to continue. <br> 言語を選択して続けます。</p>
         <div class="language-selector-container">
             <a class="selector-box" onclick="document.getElementById('welcome').style.display='none'">English</a>
