Add link to japanese resume version

--- a/index_jp.html
+++ b/index_jp.html
@@ -19,7 +19,7 @@
                 <a class="a-header prevent-select" href="./index_jp.html">自作</a>
                 <div class="dropbtn prevent-select" onclick="dropdownToggle()">その他<span class="material-icons inline-material-icons prevent-select">expand_more</span>
                     <div class="dropdown-content" id="myDropdown">
-                        <a class="prevent-select" href="./document/resume.pdf" target="_blank">履歴書<span class="material-icons inline-material-icons">file_download</span></a>
+                        <a class="prevent-select" href="./document/resume_jp.pdf" target="_blank">履歴書<span class="material-icons inline-material-icons">file_download</span></a>
                         <a class="prevent-select" href="https://github.com/Swarmz/project-landing-page" target="_blank">GitHub <span class="material-icons inline-material-icons">open_in_new</span></a>
                         <a class="prevent-select" href="https://www.theodinproject.com/about" target="_blank">The Odin Project <span class="material-icons inline-material-icons">open_in_new</span></a>
                     </div>
@@ -58,31 +58,31 @@
                 <a href="etchasketch.html" id="disable-mobile-link">
                     <div class="card">
                         <img src="./img/img-panel-pen.jpg" alt="">
-                        <div class="card-text"><h3>描く</h3></div>
+                        <div class="card-text"><p>描く</p></div>
                     </div>
                 </a>
                 <a href="rock-paper-scissors.html">  
                     <div class="card">
                         <img src="./img/rps.jpg" alt="hands displaying rock, paper, and scissors">
-                        <div class="card-text"><h3>じゃん拳</h3></div>
+                        <div class="card-text"><p>じゃん拳</p></div>
                     </div>
                 </a>
                 <a href="https://phenomenalgavinsutton6511.wordpress.com/" target="_blank">  
                     <div class="card">
                         <img src="./img/ramenWebsiteIcon.jpg" alt="bowl of ramen">
-                        <div class="card-text"><h3 style="white-space: nowrap;">らーめん山田</h3></div>
+                        <div class="card-text"><p style="white-space: nowrap;">らーめん山田</p></div>
                     </div>
                 </a>
                 <a class="out-of-service tooltip" onclick="document.getElementById('id01').style.display='block'"><span class="tooltiptext">使用禁止</span>
                     <div style="opacity:0.6;" class="card">
                         <img src="./img/calculator.jpg" alt="">
-                        <div class="card-text"><h3>電卓</h3></div>
+                        <div class="card-text"><p>電卓</p></div>
                     </div>
                 </a>
                 <a class="out-of-service tooltip" onclick="document.getElementById('id01').style.display='block'"><span class="tooltiptext">使用禁止</span>
                     <div style="opacity:0.6;" class="card">
                         <img src="./img/under_construction.jpg" alt="">
-                        <div class="card-text"><h3>発展中</h3></div>
+                        <div class="card-text"><p>発展中</p></div>
                     </div>
                 </a>
             </div>
