Adjust header tags and spacing

--- a/index.html
+++ b/index.html
@@ -58,31 +58,31 @@
                 <a href="etchasketch.html" id="disable-mobile-link">
                     <div class="card">
                         <img src="./img/img-panel-pen.jpg" alt="">
-                        <div class="card-text"><h3>Etch-A-Sketch</h3></div>
+                        <div class="card-text"><p>Etch-A-Sketch</p></div>
                     </div>
                 </a>
                 <a href="rock-paper-scissors.html">  
                     <div class="card">
                         <img src="./img/rps.jpg" alt="hands displaying rock, paper, and scissors">
-                        <div class="card-text"><h3>Rock Paper Scissors</h3></div>
+                        <div class="card-text"><p>Rock Paper Scissors</p></div>
                     </div>
                 </a>
                 <a href="https://phenomenalgavinsutton6511.wordpress.com/" target="_blank">  
                     <div class="card">
                         <img src="./img/ramenWebsiteIcon.jpg" alt="bowl of ramen">
-                        <div class="card-text"><h3>Ramen Yamada</h3></div>
+                        <div class="card-text"><p>Ramen Yamada</p></div>
                     </div>
                 </a>
                 <a class="out-of-service tooltip" onclick="document.getElementById('id01').style.display='block'"><span class="tooltiptext">Unavailable</span>
                     <div style="opacity:0.6;" class="card">
                         <img src="./img/calculator.jpg" alt="">
-                        <div class="card-text"><h3>Calculator</h3></div>
+                        <div class="card-text"><p>Calculator</p></div>
                     </div>
                 </a>
                 <a class="out-of-service tooltip" onclick="document.getElementById('id01').style.display='block'"><span class="tooltiptext">Unavailable</span>
                     <div style="opacity:0.6;" class="card">
                         <img src="./img/under_construction.jpg" alt="">
-                        <div class="card-text"><h3>Coming Soon</h3></div>
+                        <div class="card-text"><p>Coming Soon</p></div>
                     </div>
                 </a>
             </div>
