Add basic language switcher to footer

--- a/index.html
+++ b/index.html
@@ -104,6 +104,13 @@
 <div class="footer">
     Created by Gavin Sutton<br>
     Images provided by freepik.com
+    <div class="language-select-box">
+        <button class="language-button">Select Language</button>
+        <div class="language-options">
+            <a href="./index_jp.html">日本語</a>
+        </select>
+        </div>
+    </div>
 </div>
 <!-- Hidden popup element-->
 <div id="id01" class="popup-error">
