--- a/index_jp.html
+++ b/index_jp.html
@@ -104,6 +104,13 @@
 <div class="footer">
     ギャビン・サットン作<br>
     画像はfreepik.comより提供
+    <div class="language-select-box">
+        <button class="language-button">言語を選ぶ</button>
+        <div class="language-options">
+            <a href="./index.html">English</a>
+        </select>
+        </div>
+    </div>
 </div>
 <!-- Hidden popup element-->
 <div id="id01" class="popup-error">
