--- a/index.html
+++ b/index.html
@@ -42,12 +42,12 @@
     </div>
     <div class="main">
         <div class="quote-panel">
-            <div class="quote-panel-container">
+            <div class="quote-panel-container" id="quote-panel-container">
                 <div class="quote-panel-title"><h2>Basic Info</h2></div>
                 <div class="quote-container">
-                    <div class="quote-left"><ul class="quote-list"><li>Nationality</li><li>Age</li><li>Home</li><li>Favorite Food</li></ul></div>
+                    <div class="quote-left" id="quote-left"><ul class="quote-list"><li>Nationality</li><li>Age</li><li>Home</li><li>Favorite Food</li></ul></div>
                     <div class="quote-center"><ul class="quote-list"><li><span class="material-icons">east</span></li><li><span class="material-icons">east</span></li><li><span class="material-icons">east</span></li><li><span class="material-icons">east</span></li></ul></div>
-                    <div class="quote-right"><ul class="quote-list"><li>Canadian</li><li>30</li><li>Miyagi</li><li>Ramen</li></ul></div>
+                    <div class="quote-right" id="quote-right"><ul class="quote-list"><li>Canadian</li><li>30</li><li>Miyagi</li><li>Ramen</li></ul></div>
                 </div>
             </div>
         </div>
@@ -126,7 +126,7 @@
         <p>Welcome to my website! <br> ようこそ！</p>
         <p>Please choose a language to continue. <br> 言語を選択して続けます。</p>
         <div class="language-selector-container">
-            <a class="selector-box" onclick="document.getElementById('welcome').style.display='none'">English</a>
+            <a class="selector-box" onclick="closeAndStart()">English</a>
             <a class="selector-box" href="./index_jp.html">日本語</a>
         </div>
     </div>
