Add basic info animation for jp page

--- a/index_jp.html
+++ b/index_jp.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>サットン・ギャビンLP</title>
     <link rel="stylesheet" href="style.css">
-    <script src="index.js" defer></script>
+    <script src="index_jp.js" defer></script>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet">
 </head>
@@ -42,12 +42,12 @@
     </div>
     <div class="main">
         <div class="quote-panel">
-            <div class="quote-panel-container">
+            <div class="quote-panel-container" id="quote-panel-container">
                 <div class="quote-panel-title"><h2>私について</h2></div>
                 <div class="quote-container">
-                    <div class="quote-left"><ul class="quote-list"><li>国</li><li>歳</li><li>住</li><li>好食物</li></ul></div>
+                    <div class="quote-left" id="quote-left"><ul class="quote-list"><li>国</li><li>歳</li><li>住</li><li>好食物</li></ul></div>
                     <div class="quote-center"><ul class="quote-list"><li><span class="material-icons">east</span></li><li><span class="material-icons">east</span></li><li><span class="material-icons">east</span></li><li><span class="material-icons">east</span></li></ul></div>
-                    <div class="quote-right"><ul class="quote-list"><li>カナダ人</li><li>30</li><li>宮城県</li><li>ラーメン</li></ul></div>
+                    <div class="quote-right" id="quote-right"><ul class="quote-list"><li>カナダ人</li><li>30</li><li>宮城県</li><li>ラーメン</li></ul></div>
                 </div>
             </div>
         </div>
