Improve footer language select design

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
     Created by Gavin Sutton<br>
     Images provided by freepik.com
     <div class="language-select-box">
-        <button class="language-button">Select Language</button>
+        <div>言語を選ぶ</div>
         <div class="language-options">
             <a href="./index_jp.html">日本語</a>
         </select>
