--- a/index_jp.html
+++ b/index_jp.html
@@ -105,7 +105,7 @@
     ギャビン・サットン作<br>
     画像はfreepik.comより提供
     <div class="language-select-box">
-        <button class="language-button">言語を選ぶ</button>
+        <div>Select Language</div>
         <div class="language-options">
             <a href="./index.html">English</a>
         </select>
