Add jp versions of work pages and all page footers

--- a/about.html
+++ b/about.html
@@ -75,7 +75,13 @@
             </div>
             <div class="footer">
                 Created by Gavin Sutton<br>
-                Images Designed by Freepik
+                Images provided by freepik.com
+                <div class="language-select-box">
+                    <div>言語を選ぶ</div>
+                    <div class="language-options">
+                        <a href="./about_jp.html">日本語</a>
+                    </div>
+                </div>
             </div>
         </div>
     </body>
