--- a/about_jp.html
+++ b/about_jp.html
@@ -74,6 +74,13 @@
             <div class="footer">
                 ギャビン・サットン作<br>
                 画像はfreepik.comより提供
+                <div class="language-select-box">
+                    <div>Select Language</div>
+                    <div class="language-options">
+                        <a href="./about.html">English</a>
+                    </select>
+                    </div>
+                </div>
             </div>
         </div>
     </body>
