--- a/index_jp.html
+++ b/index_jp.html
@@ -55,13 +55,13 @@
         <div id="img-panel">
             <div class="img-panel-title"><h2>自作</h2></div>
             <div class="img-panel-main">
-                <a href="etchasketch.html" id="disable-mobile-link">
+                <a href="etchasketch_jp.html" id="disable-mobile-link">
                     <div class="card">
                         <img src="./img/img-panel-pen.jpg" alt="">
                         <div class="card-text"><p>描く</p></div>
                     </div>
                 </a>
-                <a href="rock-paper-scissors.html">  
+                <a href="rock-paper-scissors_jp.html">  
                     <div class="card">
                         <img src="./img/rps.jpg" alt="hands displaying rock, paper, and scissors">
                         <div class="card-text"><p>じゃん拳</p></div>
