--- a/rock-paper-scissors_jp.html
+++ b/rock-paper-scissors_jp.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rock Paper Scissors</title>
     <link rel="stylesheet" href="style.css">
-    <script src="index.js" defer></script>
+    <script src="index_jp.js" defer></script>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
@@ -14,12 +14,12 @@
     <div class="hero">
         <div class="header">
             <div class="header-links">
-                <a class="a-header prevent-select" href="./index.html">Home</a>
-                <a class="a-header prevent-select" href="./about.html">About</a>
-                <a class="a-header prevent-select" href="./index.html#img-panel">Work</a>
-                <div class="dropbtn prevent-select" onclick="dropdownToggle()">More<span class="material-icons inline-material-icons prevent-select">expand_more</span>
+                <a class="a-header prevent-select" href="./index_jp.html">ホーム</a>
+                <a class="a-header prevent-select" href="./about_jp.html">ストーリー</a>
+                <a class="a-header prevent-select" href="./index_jp.html">自作</a>
+                <div class="dropbtn prevent-select" onclick="dropdownToggle()">その他<span class="material-icons inline-material-icons prevent-select">expand_more</span>
                     <div class="dropdown-content" id="myDropdown">
-                        <a class="prevent-select" href="./document/resume.pdf" target="_blank">Resumé<span class="material-icons inline-material-icons">file_download</span></a>
+                        <a class="prevent-select" href="./document/resume_jp.pdf" target="_blank">履歴書<span class="material-icons inline-material-icons">file_download</span></a>
                         <a class="prevent-select" href="https://github.com/Swarmz/project-landing-page" target="_blank">My GitHub <span class="material-icons inline-material-icons">open_in_new</span></a>
                         <a class="prevent-select" href="https://www.theodinproject.com/about" target="_blank">The Odin Project <span class="material-icons inline-material-icons">open_in_new</span></a>
                     </div>
@@ -158,12 +158,13 @@
     </script>
     </div>
     <div class="footer">
-        Created by Gavin Sutton<br>
-        Images provided by freepik.com
+        ギャビン・サットン作<br>
+        画像はfreepik.comより提供
         <div class="language-select-box">
-            <div>言語を選ぶ</div>
+            <div>Select Language</div>
             <div class="language-options">
-                <a href="./rock-paper-scissors_jp.html">日本語</a>
+                <a href="./rock-paper-scissors.html">English</a>
+            </select>
             </div>
         </div>
     </div>
