Fix jp page titles to japanese

--- a/about_jp.html
+++ b/about_jp.html
@@ -20,7 +20,7 @@
                     <div class="dropbtn prevent-select" onclick="dropdownToggle()">その他<span class="material-icons inline-material-icons prevent-select">expand_more</span>
                         <div class="dropdown-content" id="myDropdown">
                             <a class="prevent-select" href="./document/resume.pdf" target="_blank">履歴書<span class="material-icons inline-material-icons">file_download</span></a>
-                            <a class="prevent-select" href="https://github.com/Swarmz/project-landing-page" target="_blank">My GitHub <span class="material-icons inline-material-icons">open_in_new</span></a>
+                            <a class="prevent-select" href="https://github.com/Swarmz/project-landing-page" target="_blank">GitHub<span class="material-icons inline-material-icons">open_in_new</span></a>
                             <a class="prevent-select" href="https://www.theodinproject.com/about" target="_blank">The Odin Project <span class="material-icons inline-material-icons">open_in_new</span></a>
                         </div>
                     </div>
@@ -28,9 +28,6 @@
             </div>
             <div class="body-container">
                 <div class="about-main">
-                    <!-- <div class="main-title">
-                        <h1>About Me</h1>
-                    </div> -->
                     <div class="about-nav">
                         <div class="about-card img-slides fade">
                             <div class="about-card-text">出身</div>
