Add basic translation

--- a/etchasketch.html
+++ b/etchasketch.html
@@ -49,7 +49,7 @@
             <div class="etchasketch-container"></div>
             <div class="instructions-container">
                 <h3>What is this?</h3>
-                <p>Hover your mouse over the play area to create squares.</p>
+                <p>Hover your mouse over the play area to draw.</p>
                 <p>You can draw anything you want.</p>
             </div>
         </div>
