Add calculator project

--- a/index.html
+++ b/index.html
@@ -73,15 +73,15 @@
                         <div class="card-text"><p>Ramen Yamada</p></div>
                     </div>
                 </a>
-                <a class="out-of-service tooltip" onclick="document.getElementById('id01').style.display='block'"><span class="tooltiptext">Unavailable</span>
-                    <div style="opacity:0.6;" class="card">
-                        <img src="./img/calculator.jpg" alt="">
+                <a href="calculator.html">  
+                    <div class="card">
+                        <img src="./img/calculator.jpg" alt="drawing of a calculator">
                         <div class="card-text"><p>Calculator</p></div>
                     </div>
                 </a>
                 <a class="out-of-service tooltip" onclick="document.getElementById('id01').style.display='block'"><span class="tooltiptext">Unavailable</span>
                     <div style="opacity:0.6;" class="card">
-                        <img src="./img/under_construction.jpg" alt="">
+                        <img src="./img/under_construction.jpg" alt="blueprint saying 'under construction'">
                         <div class="card-text"><p>Coming Soon</p></div>
                     </div>
                 </a>
