--- a/index_jp.html
+++ b/index_jp.html
@@ -16,10 +16,9 @@
             <div class="header-links">
                 <a class="a-header prevent-select" href="./index_jp.html">ホーム</a>
                 <a class="a-header prevent-select" href="./about_jp.html">ストーリー</a>
-                <a class="a-header prevent-select" href="./index_jp.html">自作</a>
+                <a class="a-header prevent-select" href="./index_jp.html#img-panel">自作</a>
                 <div class="dropbtn prevent-select" onclick="dropdownToggle()">その他<span class="material-icons inline-material-icons prevent-select">expand_more</span>
                     <div class="dropdown-content" id="myDropdown">
-                        <a class="prevent-select" href="./document/resume_jp.pdf" target="_blank">履歴書<span class="material-icons inline-material-icons">file_download</span></a>
                         <a class="prevent-select" href="https://github.com/Swarmz/project-landing-page" target="_blank">GitHub <span class="material-icons inline-material-icons">open_in_new</span></a>
                         <a class="prevent-select" href="https://www.theodinproject.com/about" target="_blank">The Odin Project <span class="material-icons inline-material-icons">open_in_new</span></a>
                     </div>
@@ -32,7 +31,7 @@
             <div class="hero-text">
                 <div class="hero-text-title"><h1>サットン <br> ギャビン</h1></div>
                 <div class="hero-text-main">フロントエンド・エンジニア</div>
-                <button class="hero-text-button" onclick="window.location.href='./about.html';">私のストーリー</button>
+                <button class="hero-text-button" onclick="window.location.href='./about_jp.html';">私のストーリー</button>
             </div>
             <div class="hero-img">
                 <img src="./img/self-zoomed.jpg" alt="picture of me" class="hero-sample">
@@ -73,8 +72,8 @@
                         <div class="card-text"><p style="white-space: nowrap;">らーめん山田</p></div>
                     </div>
                 </a>
-                <a class="out-of-service tooltip" onclick="document.getElementById('id01').style.display='block'"><span class="tooltiptext">使用禁止</span>
-                    <div style="opacity:0.6;" class="card">
+                <a href="calculator_jp.html"> 
+                    <div class="card">
                         <img src="./img/calculator.jpg" alt="">
                         <div class="card-text"><p>電卓</p></div>
                     </div>
