--- a/rock-paper-scissors_jp.html
+++ b/rock-paper-scissors_jp.html
@@ -16,10 +16,9 @@
             <div class="header-links">
                 <a class="a-header prevent-select" href="./index_jp.html">ホーム</a>
                 <a class="a-header prevent-select" href="./about_jp.html">ストーリー</a>
-                <a class="a-header prevent-select" href="./index_jp.html">自作</a>
+                <a class="a-header prevent-select" href="./index_jp.html#img-panel">自作</a>
                 <div class="dropbtn prevent-select" onclick="dropdownToggle()">その他<span class="material-icons inline-material-icons prevent-select">expand_more</span>
                     <div class="dropdown-content" id="myDropdown">
-                        <a class="prevent-select" href="./document/resume_jp.pdf" target="_blank">履歴書<span class="material-icons inline-material-icons">file_download</span></a>
                         <a class="prevent-select" href="https://github.com/Swarmz/project-landing-page" target="_blank">GitHub <span class="material-icons inline-material-icons">open_in_new</span></a>
                         <a class="prevent-select" href="https://www.theodinproject.com/about" target="_blank">The Odin Project <span class="material-icons inline-material-icons">open_in_new</span></a>
                     </div>
