Add function to remember language selection

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
     </div>
 </div>
 <div class="welcome-popup" id="welcome">
-    <div class="welcome-popup-content">
+    <div class="welcome-popup-content" id="welcome-box">
         <p>Welcome to my website! <br> ようこそ！</p>
         <p>Please choose a language to continue. <br> 言語を選択して続けます。</p>
         <div class="language-selector-container">
